# flare

./: .env.example  .gitignore  Dockerfile  LICENSE  POSITIONING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: index.html
flare/: __init__.py
flare/api/: __init__.py  deps.py  main.py  metrics.py  models.py
flare/api/routes/: demo.py  detect.py  health.py  metrics.py  summarize.py
flare/cli/: __init__.py  main.py
flare/clustering/: __init__.py  clusterer.py
flare/dashboard/: __init__.py
flare/detection/: __init__.py  detector.py  server.py
flare/eval/: __init__.py  benchmark.py
flare/experiment/: __init__.py  sweep.py
flare/ingestion/: __init__.py  drain_validator.py  formats.py  models.py  parser.py
flare/llm/: __init__.py  client.py  prompts.py  schemas.py  summarizer.py
flare/replay/: __init__.py  replayer.py  shuffler.py
logs/: sample_labels.csv
tests/: test_api.py  test_clustering.py  test_detection.py  test_eval.py  test_ingestion.py  test_llm_eval.py  test_llm_schemas.py  test_llm_summarizer.py  test_replay.py  test_shuffler.py
