[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flare-log-analyzer"
version = "0.1.0"
description = "LLM-powered log anomaly detection and incident summarization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Raghav Kachroo"},
]
keywords = ["logging", "anomaly-detection", "aiops", "observability", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "drain3>=0.9.11",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]
tracking = [
    "mlflow>=2.10.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]
all = ["flare-log-analyzer[llm,api,tracking,dev]"]

[project.scripts]
flare = "flare.cli.main:cli"

[tool.setuptools.packages.find]
include = ["flare*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
